# weather-pipe

./: .gitignore  .pre-commit-config.yaml  README.md  dbt_project.yml  pyproject.toml  ruff.toml
.github/workflows/: ci_tests.yaml  run_combine_parquet.yaml  run_raw_layer.yaml
configs/: raw_layer.yaml
data/combined/liverpool/: 250701_033811_forecast_liverpool.parquet  250801_035431_forecast_liverpool.parquet
data/combined_raw/liverpool/: 250901_031945_forecast_liverpool.parquet  251001_030930_forecast_liverpool.parquet  251101_030954_forecast_liverpool.parquet  251201_034955_forecast_liverpool.parquet  260101_034911_forecast_liverpool.parquet
data/raw/Liverpool/: 250218_194312_forecast_Liverpool.parquet
data/raw/liverpool/: 20250611_172517_forecast_liverpool.parquet  20250612_024700_forecast_liverpool.parquet  20250613_024816_forecast_liverpool.parquet  20250614_024233_forecast_liverpool.parquet  20250615_025529_forecast_liverpool.parquet  20250616_025212_forecast_liverpool.parquet  20250617_024841_forecast_liverpool.parquet  20250618_024721_forecast_liverpool.parquet  20250619_024836_forecast_liverpool.parquet  20250620_024742_forecast_liverpool.parquet  20250621_024310_forecast_liverpool.parquet  20250622_025614_forecast_liverpool.parquet  20250623_025705_forecast_liverpool.parquet  20250624_024932_forecast_liverpool.parquet  20250625_025017_forecast_liverpool.parquet  20250626_024853_forecast_liverpool.parquet  20250627_024942_forecast_liverpool.parquet  20250628_024413_forecast_liverpool.parquet  20250629_025927_forecast_liverpool.parquet  20250630_025513_forecast_liverpool.parquet  20250701_030203_forecast_liverpool.parquet  20250702_024925_forecast_liverpool.parquet  20250703_025122_forecast_liverpool.parquet  20250704_024918_forecast_liverpool.parquet  20250705_024355_forecast_liverpool.parquet  20250706_025748_forecast_liverpool.parquet  20250707_025557_forecast_liverpool.parquet  20250708_025043_forecast_liverpool.parquet  20250709_025242_forecast_liverpool.parquet  20250710_025225_forecast_liverpool.parquet  20250711_025612_forecast_liverpool.parquet  20250712_025522_forecast_liverpool.parquet  20250713_030339_forecast_liverpool.parquet  20250714_030157_forecast_liverpool.parquet  20250715_030016_forecast_liverpool.parquet  20250716_025707_forecast_liverpool.parquet  20250717_025720_forecast_liverpool.parquet  20250718_025947_forecast_liverpool.parquet  (+490 more)
dev_tools/: create_test_schemas.py
src/weather_pipe/: 000_raw_pipe.py  __init__.py  data_structures.py  events.py  handlers.py  io.py  io_funcs.py  logger.py  message_bus.py  pipe_000_raw.py  pipelines.py  schemas.py  script_000_combine_parquets.py  transform.py  uow.py  utils.py
src/weather_pipe/adapters/: clock.py  (+2 more)
tests/: conftest.py  test_fakes_api.py  test_pipe_000_raw.py  test_transform.py  test_utils.py
tests/adapters/: test_fakes_api.py
tests/domain/: test_result.py  test_transform.py
tests/usecases/: test_bronze_layer.py  test_raw_layer.py
warehouse/macros/: standardise_str_cols.sql  utils.sql
(+41 files in other folders)
