[project]
name = "weather-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ed cuss", email = "edcussmusic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.1.0",
    "connectorx>=0.4.3",
    "hypothesis>=6.127.9",
    "polars[sqlalchemy]>=1.32.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "returns>=0.24.0",
    "structlog>=25.1.0",
]

[project.scripts]
weather-pipe = "weather_pipe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
    "scalene>=1.5.51",
]

[tool.coverage.run]
omit = [
    ".venv/*",
    "./src/weather_pipe/pipe_000_raw.py",
    "./src/weather_pipe/script_000_combine_parquets.py",
]
