[project]
name = "weather-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ed cuss", email = "edcussmusic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.1.0",
    "danom>=0.8.2",
    "io-adapters>=0.2.1",
    "polars>=1.37.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.150.1",
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "repo-mapper-rs>=0.3.0",
    "ruff>=0.9.6",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = [
    ".venv/*",
    "./src/weather_pipe/v2/pipelines/*",
    "./src/weather_pipe/script_000_combine_parquets.py",
]
